Replace black, isort, flake8 with ruff (#446)
* Replace environment.yml with conda-lock.yml

TODO
* [ ] valid pyproject.toml for `pip install -e .[dev]`

* Configure conda-lock in pyproject.toml

Currently pip does not understand pyproject.toml file

* Switched to hatch + deleted unneeded setup.cfg and setup.py

* Make pyproject.toml valid + add sections not migrated by hatch

Skipped flake8 config as this will be replaced by ruff

* Remove esmvaltool as python dep

* Remove docs and test from sdist + mypy stricter and fix

* Move mypy from precommit to ci + remove pyroma as it is not useful anymore

* Move mypy from precommit to ci + remove pyroma as it is not useful anymore

* Use lock in ci

* Add env name to ci

* Use shell for mypy

* Use shell for mypy

* Exclude lock from lint

* Use lock in docs

* Typo

* No longer need MANIFEST.in

* Exclude dev deps during install

Unable to exclude during lock generation as `--no-dev-dependencies` moves dev deps to main cat.

* Use lock file to install dev deps

* Remove unused dependencies

* Add osx-64 + lock grpc4bmi deps

* Regenerate lock file

* Add missing fsspec dep

* changelog entry

* Add cartopy as dep

Because it is imported in this package

* Give nicer error when esmvaltool/esmvalcore package can not be found

* Use custom error

* Add test for ESMValToolNotFoundError

* Replace bumpversion with single version in pyproject.toml

* Perform build on ci each push

* Replace black, isort, flake8 with ruff

* Developer improvements should not be part of changelog

* ruff format

* Ignore .venv/

* Check format on ci

* Install build before building

* On ci run ruff in right shell

* Add scipy to dev deps as a test imports it

* Revert "Add scipy to dev deps as a test imports it"

This reverts commit 0bc3f8941357f43919db464431aa81dbd6c1ac95.

Was test script not part of repo

* Add flake8-builtins ruff rules

* Add flak

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -24,8 +24,16 @@ jobs:
         shell: bash -l {0}
         run: |
           pip3 install -e .[dev]
-      - name: Run pre commit hooks like linters and black formatter
-        uses: pre-commit/action@v2.0.3
+      - name: Non-ruff lint
+        uses: pre-commit/action@v3.0.1
+        env:
+          SKIP: ruff,ruff-format
+      - name: Ruff Lint
+        run: ruff check --output-format=github .
+        shell: bash -l {0}
+      - name: Check format
+        run: ruff format --check
+        shell: bash -l {0}
       - name: Check typings with mypy
         run: mypy
         shell: bash -l {0}
