--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,10 @@ jobs:
       - name: Install dependencies
         shell: bash -l {0}
         run: |
-          pip3 install -e .[dev]
+          pip3 install -e .[dev] build
       - name: Test with pytest
         run: pytest
+        shell: bash -l {0}
+      - name: Build
+        run: python -m build
         shell: bash -l {0}
