Dont include test code in coverage report

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,6 +118,7 @@ typeguard = '*'
 [tool.coverage.run]
 branch = true
 parallel = true
+omit = ["tests/*"]
 
 [tool.coverage.paths]
 source = ["src"]
