Replace recommark+nbspinx with myst-nb
As recommonmark is deprecated
myst-nb has myst-parser as deps, so any *.md will also be processed by myst

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,12 +58,11 @@ dependencies = [
 dev = [
     "ipython",
     "mypy",
-    "nbsphinx",
+    "myst-nb",
     "pre-commit>=2.15.0",
     "pytest",
     "pytest-cov",
     "pytest-runner",
-    "recommonmark",
     "rich",
     "sphinx",
     "sphinx-autoapi",
