--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ dev = [
     "pytest-runner",
     "rich",
     "sphinx",
+    "sphinx-autodoc2",
     "sphinx-autoapi",
     "sphinx-copybutton",
     "sphinx-rtd-theme",
