--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -11,5 +11,12 @@ SHELL ["conda", "run", "-n", "ewatercycle", "/bin/bash", "-c"]
 # To build docs, pandoc is needed
 RUN mamba install -y pandoc
 
-RUN echo ". /opt/conda/etc/profile.d/conda.sh" >> ~/.bashrc \
-    && echo "conda activate ewatercycle" >> ~/.bashrc
+# Env vars set by conda activate ewatercycle
+ENV ESMFMKFILE=/opt/conda/envs/ewatercycle/lib/esmf.mk \
+    GDAL_DATA=/opt/conda/envs/ewatercycle/share/gdal \
+    GDAL_DRIVER_PATH=/opt/conda/envs/ewatercycle/lib/gdalplugins \
+    MAGPLUS_HOME=/opt/conda/envs/ewatercycle \
+    PROJ_DATA=/opt/conda/envs/ewatercycle/share/proj \
+    PROJ_NETWORK=ON \
+    UDUNITS2_XML_PATH=/opt/conda/envs/ewatercycle/share/udunits/udunits2.xml \
+    XML_CATALOG_FILES="file:///opt/conda/envs/ewatercycle/etc/xml/catalog file:///etc/xml/catalog"
