--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     # otherwise pip installation fails on esmpy
     "Fiona",
     "grpc4bmi>=0.4.0",
+    "remotebmi",
     "hydrostats",
     "matplotlib>=3.5.0",
     "numpy",
