--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "ewatercycle"
-version = "2.3.1"
+version = "2.4.0"
 description = "A Python package for running and validating a hydrology model"
 readme = "README.md"
 license = "Apache-2.0"
@@ -52,7 +52,9 @@ dependencies = [
     "Shapely",
     "xarray",
     "fsspec",
-    'cartopy',
+    "cartopy",
+    # Pin pyopenssl (conda installs old version) https://github.com/conda/conda/issues/13619
+    "pyopenssl>=24.0.0",
 ]
 
 [project.optional-dependencies]
