--- a/pyproject.toml
+++ b/pyproject.toml
@@ -208,6 +208,8 @@ ignore = [
     "E501",
     # Allow prints
     "T201",
+    # Allow shadowing builtins
+    "A004",
 ]
 
 [tool.ruff.lint.pydocstyle]
