--- a/pyproject.toml
+++ b/pyproject.toml
@@ -138,6 +138,9 @@ files = ["src"]
 [tool.ruff]
 target-version = "py310"
 extend-include = ["*.ipynb"]
+exclude = [
+    "src/ewatercycle/testing/data/test_file_grdc_Q_Day.Cmd.txt"
+]
 
 [tool.ruff.lint]
 select = [
